--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -61,22 +61,9 @@ p {
   line-height: 1.5rem;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-a,
-span,
-div,
-code {
-  word-break: break-word;
-}
-
 .big-heading {
   font-size: 2.5rem !important;
+  overflow-wrap: break-word;
 }
 
 .medium-heading {
