--- a/client/src/components/profile/components/portfolio.css
+++ b/client/src/components/profile/components/portfolio.css
@@ -6,3 +6,7 @@
   width: 150px;
   min-width: 150px;
 }
+
+.media {
+  word-break: break-word;
+}
